--- a/index.html
+++ b/index.html
@@ -58,7 +58,20 @@
 			        }
 			    });
 		    }
-		    abt.click()
+		    abt.click();
+
+		    window.onload = function(){
+				document.onkeydown = function(event){
+		        var ev = event || window.event || arguments.callee.caller.arguments[0];
+					if(event.keyCode = 123){
+						
+						return false;//123 代表F12键位
+					}
+				}
+			}
+		    document.oncontextmenu = function(){ 
+				return false; 
+			} //禁止右键
 		</script>
 	</body>
 </html>
